--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <div>
     <a href="https://steamcommunity.com/id/K1ngC001" target="_blank">Find Me.</a>
-    <a href="https://github.com/K1ngC001" target="_blank">Find Me.</a>
+    <a href="https://www.youtube.com/@K1ngC001" target="_blank">Find Me.</a>
   </div>
 
 </body>
